tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-count-empty/expected.err
Error: invalid syntax: expected something else, '(', or '&', found ']'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-count-empty/input.k65:2:8 ]
   │
 2 │     .a[]:byte
   │        ┬  
   │        ╰── here
───╯
